# E-MarketDataExplorer

./: .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: engineering-issue-template.md
docs/source/: api.rst  author.rst  conf.py  dev_insights.rst  eda_chart.rst  get_started.rst  index.rst  offline_conf.py  usage.rst
emarket_data_explorer/: __init__.py  __main__.py  classtype.py  cli.py  config.py  constant.py  data_process.py  database.py  datatype.py  review_planning.py  shopee_async_crawler.py  shopee_crawler.py  shopee_data_explorer.py  shopee_eda.py  shopee_selenium_crawler.py  workflow.py
shopee_crawler/: shopee_crawler.py
shopee_data_explorer/: __init__.py  __main__.py  cli.py  config.py  data_process.py  database.py  shopee_crawler.py  shopee_data_explorer.py  shopee_eda.py
shopee_eda/: shopee_eda.py
src/emarket_data_explorer/: __init__.py  cli.py  constant.py  data_process.py  database.py  shopee_async_crawler.py  shopee_data_explorer.py
tests/: test_shopee_data_explorer.py
