[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = emarket explorer team <paulyang0125@gmail.com>
maintainer_email = paulyang0125@gmail.com
license = Apache License 2.0


# [options]
# package_dir=src
# packages=find:

[options.packages.find]
where=src
